--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,5 +16,6 @@ test:
   - python Task1A.py
   - python Task1B.py
   - python Task1C.py
+  - python Task1F.py
   - python Task2A.py
   - python Task2D.py
